--- a/otherpckg.html
+++ b/otherpckg.html
@@ -178,7 +178,7 @@
                         <P><i class="ri-close-circle-fill"></i> Items not mentioned </P>
                         <P>*with term and condition apply</P>
                     </div>
-                    <button onclick="location.href='https://wa.me/6287763118485"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                    <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                   </div>
 
                   <div class="photopckg">
