--- a/carpckgstd.html
+++ b/carpckgstd.html
@@ -146,7 +146,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 50K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 7 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -164,7 +164,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 50K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 5 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -182,7 +182,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 50K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 7 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -200,7 +200,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 75K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 12-16 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -218,7 +218,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 125K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 21-50 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -236,7 +236,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 75K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 7 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -254,7 +254,7 @@
                             <P><i class="ri-exchange-dollar-line"></i> OVER TIME IDR 50K/HOUR</P>
                             <P><i class="ri-user-add-line"></i> 7 SEATS</P>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -277,7 +277,7 @@
                             <p><i class="ri-parking-fill"></i> PARKING FREE</p>
                             <p><i class="ri-cup-line"></i> MINERAL WATER</p>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
             </ul>
