--- a/carpckglux.html
+++ b/carpckglux.html
@@ -150,7 +150,7 @@
                             <p><i class="ri-parking-fill"></i> PARKING FREE</p>
                             <p><i class="ri-cup-line"></i> MINERAL WATER</p>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -173,7 +173,7 @@
                             <p><i class="ri-parking-fill"></i> PARKING FREE</p>
                             <p><i class="ri-cup-line"></i> MINERAL WATER</p>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -196,7 +196,7 @@
                             <p><i class="ri-parking-fill"></i> PARKING FREE</p>
                             <p><i class="ri-cup-line"></i> MINERAL WATER</p>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
 
@@ -219,7 +219,7 @@
                             <p><i class="ri-parking-fill"></i> PARKING FREE</p>
                             <p><i class="ri-cup-line"></i> MINERAL WATER</p>
                         </div>
-                        <button onclick="location.href='wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
+                        <button onclick="location.href='https://wa.me/6287763118485'"><i class="ri-whatsapp-line"></i> BOOK NOW</button>
                     </div>
                 </li>
             </ul>
